# tp_c_hw

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md  test.txt  test1.txt  test2.txt  test3.txt
.circleci/: config.yml
.github/: config.yml
.github/workflows/: config.yml
linters/: run.sh
project/include/: make.h  read_write.h  sum.h  sum_par.h  task_structure.h
project/src/: gen.c  main.c  make.c  read_write.c  sum.c  sum_par.c  task_structure.c
project/test/: CMakeLists.txt  test_lin_algorithm.cpp  test_par_algotithm.cpp  tests.cpp  tests1.cpp  tests2.cpp  tests3.cpp  tests4_compare_file.cpp
project/test/stress_test/include/: utils.h
project/test/stress_test/src/: compare_file.c  stress_test.c  utils.c
